@@ -1,3 +1,7 @@
+2004-05-18  Todd Berman  <tberman@sevenl.net>
+
+	* samples/Scribble.cs: Im bored, you can erase, etc
+
 2004-05-18  Mike Kestner  <mkestner@ximian.com>
 
 	* glib/MissingIntPtrCtorException.cs : new exception to throw if 
